src/styles/scss/base/_base.scss
/* Base Styles ------------------------------------------- */
* {
  box-sizing: border-box;
  font-family: $font-stack-primary;
}

body {
  margin: 0;
  color: $color-text-primary;
  background: #fff;
	text-align: center;
}

ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

a {
  color: $color-text-primary;
  text-decoration: none;
	font-family: 'Quicksand', sans-serif;
  &:hover {
    color: $color-text-secondary;
  }
}

a:hover {
	/* color: rgba(49,176,213, .7); */
}

h3 {
	margin-top: 35px;
}

p {
	color: #3c3c3c;
	max-width: 70%;
	text-align: center;
	margin: 5px auto;
	font-family: 'Quicksand', sans-serif;
	padding: 5px;	
}

.caption-text {
	color: #fff;
}

